// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders error 1`] = `
<div>
  <button
    class="css-x4chy1-Button"
  >
    Click me
  </button>
</div>
`;

exports[`<Button /> renders success 1`] = `
<div>
  <button
    class="css-7r05ul-Button"
  >
    Click me
  </button>
</div>
`;

exports[`<Button /> renders warning 1`] = `
<div>
  <button
    class="css-1oicnuu-Button"
  >
    Click me
  </button>
</div>
`;
